tests/auto/gui/text/qtextimagehandler/qtextimagehandler.pro
@@ -1,0 +1,4 @@
+CONFIG += testcase
+TARGET = tst_qtextimagehandler
+QT += core-private gui gui-private testlib
+SOURCES += tst_qtextimagehandler.cpp
